@@ -4,6 +4,7 @@
 - Fixed non-standard gauge cars not being regauged when standard gauge is selected.
 - Fixed roundhouse rails not being regauged.
 - Fixed service station markers not being regauged.
+- Fixed switch markers floating on narrow gauges.
 - Fixed the mod trying to load with Unity Mod Manager versions older than 0.25.0.
 
 
